$Id: History,v 1.85 2000-06-07 02:54:40 asaim Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     *************************************************************
     * Note that modeling and test have their own History files. *
     *************************************************************

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization category
---------------------------------------

7th June 2000  Makoto Asai
- Fix the flip view of RayTracer.

2nd June May 2000  John Allison
- Forced /control/verbose 2 for compound commands.

20th May 2000  John Allison
- Bug fix in G4PhysicalVolumeModel for replicas (Guy Barrand).

26 May 2000  Guy Barrand
- management/src/G4VisCommandsScene.
  Protect against a null pointer for aScene in NotifyHandlers::SetNewValue.
- OPACS/src/G4WoViewer.cc :
  Change camera name checking so that a viewer created
  by the GUI (Wo) could be hooked.
- OPACS/src/G4GoSceneHandler.cc :
  Change circle rendering.
- OpenInventor/G4OpenInventorSceneHandler : protect against null pointers.

22nd May 2000  John Allison  (vis-V01-01-05)
- Many bug fixes from in OpenGL (opengl-V01-01-00) - see OpenGL/History.  Main
  features:
  o workaround for bug in Mesa which slowed OpenGLXm (Guy Barrand).