@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4VisCommandsViewer.hh,v 1.8 2000-05-02 09:58:10 johna Exp $
+// $Id: G4VisCommandsViewer.hh,v 1.9 2000-06-07 08:43:28 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 
 // /vis/viewer commands - John Allison  25th October 1998
@@ -95,11 +95,11 @@ private:
   G4UIcmdWithAString* fpCommand;
 };
 
-class G4VisCommandViewerShow: public G4VVisCommandViewer {
+class G4VisCommandViewerUpdate: public G4VVisCommandViewer {
 public:
   // Uses compiler defaults for copy constructor and assignment.
-  G4VisCommandViewerShow ();
-  ~G4VisCommandViewerShow ();
+  G4VisCommandViewerUpdate ();
+  ~G4VisCommandViewerUpdate ();
   G4String GetCurrentValue (G4UIcommand* command);
   void SetNewValue (G4UIcommand* command, G4String newValue);
 private:
